--- a/css/index.css
+++ b/css/index.css
@@ -82,17 +82,19 @@ form{
     display: inline-block;
 }
 .recipe-list{
-	padding-top: 20px;
+	padding-top: 40px;
 	margin-bottom: 20px;
+	margin-top: 200px;
 	display: inline-block;
 	position: absolute;
-	right: 0px;
-	left: 320px;
+	right: 50px;
+	left: 350px;
 	text-align: center;
 	border: 1px solid black;
 	width: 500px;
 	height: 500px;
 
 }
-
+#pic{
+	background: url('/assets/images/stock.png');
 }
