--- a/css/index.css
+++ b/css/index.css
@@ -23,11 +23,16 @@ body {
 form{
 	width: 75%;
 }
+h1{
+	padding-left: 10px;
+}
 .link-div{
 	width: 25%;
 }
 .log-nav{
 	padding: 5px;
+	width: 50%;
+	margin-left: 270px;
 }
 .link-div div{
 	list-style: none;
@@ -49,14 +54,38 @@ form{
 .link-div{
 	display: -webkit-inline-box
 }
-.search{
-	width: 100%;
+#search {
+	position: absolute;
+	width: 700px;
+	top: 50%;
+	left: 50%;
+	margin: 100px -250px;
+	text-align: center;
+	-webkit-box-align:center;
+}
+.name{
+	margin-right: 175px;
+	text-align: center;
+}
+#search-box{
+	width: 90%;
+	float: right;
+	margin-left: 100px;
+	display: inline-block;
+	text-align: center;
+}
+#search-btn{
+	margin-top: 5px;
+	text-align: center;
+	margin-left: 40px;
 }
 .nav-link{
 	padding: 10px;
-	padding-left: 20px;
+	font-size: 18px;
+	font-weight: 500;
+	padding-left: 40px;
 	padding-right: 10px;
-	margin-top: 27px;
+	margin-top: 23px;
 	color: #F0FFFF;
 }
 .favorites-container>.delete-favorites img{
@@ -64,21 +93,19 @@ form{
 	width: 14px;
 	display: inline-block;
 }
-.favorites-container> h5{
+.favorites-container> .favorites-title{
 	color: #F0FFFF;
 	position: relative;
 	text-align: center;
 
 }
 .favorites-container{
-	position: absolute;
-	right: 10px;
+	position: relative;
 	padding-left: 30px;
-    width: 220px;
-    text-align: left;
+    width: 300px;
     border: 1px solid black;
     padding: 10px;
-    margin: 10px;
+    margin: 50px 0 0 400px;
     display: inline-block;
 }
 .recipe-list{
